# rust-summarization

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: docker_push.yml  release.yml  rust.yml  tests.yml
.githubs/workflows/: rust.yml
src/: lib.rs  main.rs
static/css/: index.css
templates/: index.html
