[package]
name = "rust-summarization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
rust-bert = "0.20.0"
serde = "1.0.160"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }

